Enhance modal functionality and update styles for improved user experience; ensure modals display correctly and adjust overflow properties.

--- a/css/styles.css
+++ b/css/styles.css
@@ -372,6 +372,7 @@ h2 {
     border: solid black 2px;
     border-radius: 10px;
     background-color: aliceblue;
+    overflow: visible;
 }
 
 #cards_anim {
@@ -391,6 +392,8 @@ h2 {
 	animation-range: exit-crossing var(--start-range) exit-crossing var(--end-range);
     width: 50%;
     padding: 2em;
+    overflow: visible; /* Assurez-vous que ce n'est pas défini sur 'hidden' */
+    
 }
 
 .carte_content h2 {
@@ -398,6 +401,10 @@ h2 {
     margin-top: -0.5em;
 }
 
+.modal {
+    position: fixed !important; /* S'assure que le modal s'affiche correctement sur l'ensemble de l'écran */
+    z-index: 1050; /* Priorité d'affichage élevée pour le modal */
+}
 
 
 
